adding forms on second page

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="/index.html" class="nav-link">Home</a>
+                <a href="/index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Deals Data</a>
+                <a href="/data.html" class="nav-link">Deals Data</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
@@ -50,8 +50,8 @@
         <form class="main-form">
             <h1>Advanced Form Styling</h1>
             <p>
-                <!-- <label for="required-input">Please enter data for this date:</label> -->
-                <!-- <input type="date" onload="getDate()" class="form-control" id="date" name="date"> -->
+                <label for="required-input">Please enter data for this date:</label> -->
+                <input type="date" onload="getDate()" class="form-control" id="date" name="date">
             </p>
             <p>
                 <label for="optional-input">Knocks: </label>
