--- a/data.html
+++ b/data.html
@@ -16,7 +16,7 @@
                 <a href="/index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Deals Data</a>
+                <a href="/data.html" class="nav-link active">Deals Data</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
@@ -31,10 +31,52 @@
 </header>
 
 <body>
+      <div class="flex-container">
 
-    <div class="container">
-        <p>hello there</p>
-    </div>
+        <div class="flex-child">
+            <form class="main-form">
+                <h1>Daily Data</h1>
+                <fieldset>
+                    Knocks/Answers
+                </fieldset>
+                <fieldset>
+                    Knocks/Hour
+                </fieldset>
+                <fieldset>
+                    Sets/Answers
+                </fieldset>
+                <fieldset>
+                    Sets/Hour
+                </fieldset>
+                <fieldset>
+                    Total Time Knocking In Hours
+                </fieldset>
+            </form>
+        </div>
+        
+        <div class="flex-child">
+            <form class="main-form">
+                <h1>Overall Information</h1>
+                <fieldset>
+                    Days Knocking
+                </fieldset>
+                <fieldset>
+                    Total Knocks
+                </fieldset>
+                <fieldset>
+                    Total Answers
+                </fieldset>
+                <fieldset>
+                    Total Sets
+                </fieldset>
+                <fieldset>
+                    Total Hours
+                </fieldset>
+            </form>
+        </div>
+        
+      </div>
+
     <script src="home.js"></script>
 </body>
 </html>
