fixing date input

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1>Advanced Form Styling</h1>
             <p>
                 <label for="required-input">Please enter data for this date:</label> -->
-                <input type="date" onload="getDate()" class="form-control" id="date" name="date">
+                <input id="today" type="date">
             </p>
             <p>
                 <label for="optional-input">Knocks: </label>
