fixing mobile nav

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <form class="main-form">
             <h1>Advanced Form Styling</h1>
             <p>
-                <label for="required-input">Please enter data for this date:</label> -->
+                <label for="required-input">Please enter data for this date:</label>
                 <input id="today" type="date">
             </p>
             <p>
