adding divs for calculated data

--- a/data.html
+++ b/data.html
@@ -37,19 +37,24 @@
             <form class="main-form">
                 <h1>Daily Data</h1>
                 <fieldset>
-                    Knocks/Answers
+                    <legend>Knocks/Answer</legend>
+                    <div class="knocksAnswers">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Knocks/Hour
+                    <legend>Knocks/Hour</legend>
+                    <div class="knocksHour">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Sets/Answers
+                    <legend>Sets/Answer</legend>
+                    <div class="setsAnswers">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Sets/Hour
+                    <legend>Sets/Hour</legend>
+                    <div class="setsHours">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Total Time Knocking In Hours
+                    <legend>Total Time</legend>
+                    <div class="totalHoursTime">will be displayed here</div>
                 </fieldset>
             </form>
         </div>
@@ -58,19 +63,24 @@
             <form class="main-form">
                 <h1>Overall Information</h1>
                 <fieldset>
-                    Days Knocking
+                    <legend>Days Knocking</legend>
+                    <div class="knocksAnswers">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Total Knocks
+                    <legend>Total Knocks</legend>
+                    <div class="knocksHour">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Total Answers
+                    <legend>Total Answers</legend>
+                    <div class="setsAnswers">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Total Sets
+                    <legend>Total Sets</legend>
+                    <div class="setsHours">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    Total Hours
+                    <legend>Total Hours Working</legend>
+                    <div class="totalHoursTime">will be displayed here</div>
                 </fieldset>
             </form>
         </div>
