--- a/index.html
+++ b/index.html
@@ -8,20 +8,6 @@
     <link rel="stylesheet" href="styles.css" >
 </head>
 
-<!-- <header>
-    <button id="side-menu-toggle">Menu</button>
-    <div class="nav_container">
-      <nav class="main-header_nav">
-        <ul>
-            <a href="#"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="#">Deals Data</a></li>
-            <li><a href="#">Commission Calculator</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header> -->
-
   <header class="header">
     <nav class="navbar">
         <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
@@ -30,10 +16,13 @@
                 <a href="/index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-                <a href="/data.html" class="nav-link">Deals Data</a>
+                <a href="/deals.html" class="nav-link">Deals Information</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
+            </li>
+            <li class="nav-item">
+                <a href="/goals.html" class="nav-link">Goals</a>
             </li>
         </ul>
         <div class="hamburger">
@@ -76,7 +65,7 @@
 
             <fieldset>
                 <legend>Send Your Info</legend>
-                <a class="dataButton">View Data</a>
+                <a href="/data.html" class="dataButton">View Data</a>
                 <a href="/data.html" class="submitButton">Submit</a>
                 
             </fieldset>
