--- a/deals.html
+++ b/deals.html
@@ -14,16 +14,16 @@
         <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="/index.html" class="nav-link">Home</a>
+                <a href="../SigoraSpecifics/index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a href="/deals.html" class="nav-link active">Deals Information</a>
+                <a href="../SigoraSpecifics/deals.html" class="nav-link active">Deals Information</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
             </li>
             <li class="nav-item">
-                <a href="/goals.html" class="nav-link">Goals</a>
+                <a href="../SigoraSpecifics/goals.html" class="nav-link">Goals</a>
             </li>
         </ul>
         <div class="hamburger">
