--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="/index.html" class="nav-link active">Home</a>
+                <a href="../SigoraSpecifics/index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-                <a href="/deals.html" class="nav-link">Deals Information</a>
+                <a href="../SigoraSpecifics/deals.html" class="nav-link">Deals Information</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
             </li>
             <li class="nav-item">
-                <a href="/goals.html" class="nav-link">Goals</a>
+                <a href="../SigoraSpecifics/goals.html" class="nav-link">Goals</a>
             </li>
         </ul>
         <div class="hamburger">
