--- a/goals/goals.html
+++ b/goals/goals.html
@@ -10,19 +10,19 @@
 
 <header class="header">
     <nav class="navbar">
-        <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
+        <a href="#" class="nav-logo"><img src="../images/sigoraLogo.png" alt="logo" class="logo"></a>
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="../SigoraSpecifics/index.html" class="nav-link">Home</a>
+                <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a href="../SigoraSpecifics/deals.html" class="nav-link">Deals Information</a>
+                <a href="../deals/deals.html" class="nav-link">Deals Information</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
             </li>
             <li class="nav-item">
-                <a href="../SigoraSpecifics/goals.html" class="nav-link active">Goals</a>
+                <a href="../goals/goals.html" class="nav-link active">Goals</a>
             </li>
         </ul>
         <div class="hamburger">
