--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sigora Statistics</title>
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="/styles/styles.css" >
 </head>
 
   <header class="header">
     <nav class="navbar">
-        <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
+        <a href="#" class="nav-logo"><img src="/images/sigoraLogo.png" alt="logo" class="logo"></a>
         <ul class="nav-menu">
             <li class="nav-item">
-                <a href="../SigoraSpecifics/index.html" class="nav-link active">Home</a>
+                <a href="index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-                <a href="../SigoraSpecifics/deals.html" class="nav-link">Deals Information</a>
+                <a href="/deals/deals.html" class="nav-link">Deals Information</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
             </li>
             <li class="nav-item">
-                <a href="../SigoraSpecifics/goals.html" class="nav-link">Goals</a>
+                <a href="/goals/goals.html" class="nav-link">Goals</a>
             </li>
         </ul>
         <div class="hamburger">
