--- a/deals/deals.html
+++ b/deals/deals.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sigora Statistics</title>
-    <link rel="stylesheet" href="styles.css" >
-    <link rel="stylesheet" href="deals.css" >
+    <link rel="stylesheet" href="/styles/styles.css" >
+    <link rel="stylesheet" href="/styles/deals.css" >
 </head>
 
   <header class="header">
