css isn't working

--- a/goals/goals.html
+++ b/goals/goals.html
@@ -49,7 +49,7 @@
                 </p>
                 <p>
                     <label for="optional-input">Commission Goal: </label>
-                    <input type="text" id="optional-input" placeholder="Commission Goal">
+                    <input type="number" id="optional-input" placeholder="Commission Goal">
                 </p>                
             </form>
         </div>
@@ -78,8 +78,8 @@
                     <div class="setsHours">will be displayed here</div>
                 </fieldset>
                 <fieldset>
-                    <!-- answeredDoorsPerDay = (door-knock goal - doors knocked so far)/(# of remaining days*5/7) in the year) -->
-                    <legend>Answered Doors Needed Each Week Day</legend>
+                    <!-- dailyPace = (door-knock goal - doors knocked so far)/(# of remaining days*5/7) in the year) -->
+                    <legend>Daily Pace to Hit Goal</legend>
                     <div class="setsHours">will be displayed here</div>
                 </fieldset>
             </form>
