--- a/data/data.html
+++ b/data/data.html
@@ -10,7 +10,7 @@
 
 <header class="header">
     <nav class="navbar">
-        <a href="#" class="nav-logo"><img src="sigoraLogo.png" alt="logo" class="logo"></a>
+        <a href="#" class="nav-logo"><img src="/images/sigoraLogo.png" alt="logo" class="logo"></a>
         <ul class="nav-menu">
             <li class="nav-item">
                 <a href="../index.html" class="nav-link">Home</a>
