--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sigora Statistics</title>
-    <link rel="stylesheet" href="/styles/styles.css" >
+    <link rel="stylesheet" href="./styles/styles.css" >
 </head>
 
   <header class="header">
@@ -65,12 +65,12 @@
 
             <fieldset>
                 <legend>Send Your Info</legend>
-                <a href="/data.html" class="dataButton">View Data</a>
-                <a href="/data.html" class="submitButton">Submit</a>
+                <a href="/data/data.html" class="dataButton">View Data</a>
+                <a href="/data/data.html" class="submitButton">Submit</a>
                 
             </fieldset>
         </form>
     </div>
-    <script src="home.js"></script>
+    <script src="/js/home.js"></script>
 </body>
 </html>
