--- a/deals/deals.html
+++ b/deals/deals.html
@@ -97,6 +97,6 @@
             </fieldset>
         </form>
     </div>
-    <script src="home.js"></script>
+    <script src="../js/home.js"></script>
 </body>
 </html>
