--- a/goals/goals.html
+++ b/goals/goals.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Data</title>
     <link rel="stylesheet" href="../styles.css" >
+    <link rel="stylesheet" href="../styles/deals.css" >
 </head>
 
 <header class="header">
@@ -87,6 +88,6 @@
         
       </div>
 
-    <script src="home.js"></script>
+    <script src="../js/home.js"></script>
 </body>
 </html>
