--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
             <fieldset>
                 <legend>Send Your Info</legend>
-                <a href="/data/data.html" class="dataButton">View Data</a>
-                <a href="/data/data.html" class="submitButton">Submit</a>
+                <a href="./data/data.html" class="dataButton">View Data</a>
+                <a href="./data/data.html" class="submitButton">Submit</a>
                 
             </fieldset>
         </form>
