--- a/data/data.html
+++ b/data/data.html
@@ -42,7 +42,11 @@
                 <h1>Daily Data</h1>
                 <fieldset>
                     <legend>Knocks/Answer</legend>
-                    <div class="knocksAnswers">will be displayed here</div>
+                    <div class="knocksAnswers" id="knocksAnswers">
+                        Result :<br>
+                        <input type="text" id="txtresult" name="TextBox3"><br>
+                        <!-- <input type="button" name="clickbtn" value="Display Result" onclick="add_number()"> -->
+                    </div>
                 </fieldset>
                 <fieldset>
                     <legend>Knocks/Hour</legend>
@@ -68,19 +72,19 @@
                 <h1>Overall Information</h1>
                 <fieldset>
                     <legend>Days Knocking</legend>
-                    <div class="knocksAnswers">will be displayed here</div>
+                    <div class="daysKnocking">will be displayed here</div>
                 </fieldset>
                 <fieldset>
                     <legend>Total Knocks</legend>
-                    <div class="knocksHour">will be displayed here</div>
+                    <div class="totalHours">will be displayed here</div>
                 </fieldset>
                 <fieldset>
                     <legend>Total Answers</legend>
-                    <div class="setsAnswers">will be displayed here</div>
+                    <div class="totalAnswers">will be displayed here</div>
                 </fieldset>
                 <fieldset>
                     <legend>Total Sets</legend>
-                    <div class="setsHours">will be displayed here</div>
+                    <div class="totalSets">will be displayed here</div>
                 </fieldset>
                 <fieldset>
                     <legend>Total Hours Working</legend>
