--- a/index.html
+++ b/index.html
@@ -45,29 +45,29 @@
             </p>
             <p>
                 <label for="optional-input">Knocks: </label>
-                <input type="text" id="optional-input" placeholder="Knocks">
+                <input type="text" id="numKnocks" placeholder="Knocks">
             </p>
             <p>
                 <label for="optional-input">Answers: </label>
-                <input type="text" id="optional-input" placeholder="Answers">
+                <input type="text" id="numAnswers" placeholder="Answers">
             </p>
             <p>
                 <label for="optional-input">Sets: </label>
-                <input type="text" id="optional-input" placeholder="Sets">
+                <input type="text" id="numSets" placeholder="Sets">
             </p>
             <p>
                 <label for="optional-input">Total Time: </label>
-                <input type="text" id="optional-input" placeholder="Time">
+                <input type="text" id="numHours" placeholder="Time in Hours">
             </p>
             <p>
                 <label for="optional-input">Props Run: </label>
-                <input type="text" id="optional-input" placeholder="Props">
+                <input type="text" id="numProps" placeholder="Props">
             </p>
 
             <fieldset>
                 <legend>Send Your Info</legend>
-                <a href="./data/data.html" class="dataButton">View Data</a>
-                <a href="./data/data.html" class="submitButton">Submit</a>
+                <a href="./data/data.html" class="dataButton" onclick="add_number()" value="View Data"></a>
+                <!-- <a href="./data/data.html" class="submitButton">Submit</a> -->
                 
             </fieldset>
         </form>
