removing mistaken input fields

--- a/data/data.html
+++ b/data/data.html
@@ -42,10 +42,9 @@
                 <h1>Daily Data</h1>
                 <fieldset>
                     <legend>Knocks/Answer</legend>
-                    <div class="knocksAnswers" id="knocksAnswers">
-                        Result :<br>
-                        <input type="text" id="txtresult" name="TextBox3"><br>
-                        <!-- <input type="button" name="clickbtn" value="Display Result" onclick="add_number()"> -->
+                    <!-- <div class="knocksAnswers" id="knocksAnswers"> -->
+                    <div class="knocksAnswers">
+                        Result : <span id="knocksPerAnswers"></span>
                     </div>
                 </fieldset>
                 <fieldset>
