--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
                 <label for="optional-input">Props Run: </label>
                 <input type="text" id="numProps" placeholder="Props">
             </p>
-
+            
             <fieldset>
                 <legend>Send Your Info</legend>
-                <a href="./data/data.html" class="dataButton" onclick="add_number()" value="View Data"></a>
-                <!-- <a href="./data/data.html" class="submitButton">Submit</a> -->
-                
+                <!-- <a href="./data/data.html" class="dataButton" value="">View Data</a> -->
+                <a href="./data/data.html" onclick="divideNumbers()" class="submitButton">Submit</a>
             </fieldset>
         </form>
     </div>
