--- a/data/data.html
+++ b/data/data.html
@@ -19,9 +19,9 @@
             <li class="nav-item">
                 <a href="../deals/deals.html" class="nav-link">Deals Information</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a href="#" class="nav-link">Commission Calculator</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a href="../goals/goals.html" class="nav-link">Goals</a>
             </li>
