--- a/data/data.html
+++ b/data/data.html
@@ -44,7 +44,7 @@
                     <legend>Knocks/Answer</legend>
                     <!-- <div class="knocksAnswers" id="knocksAnswers"> -->
                     <div class="knocksAnswers">
-                        Result : <span id="knocksPerAnswers"></span>
+                        Result : <span id="knocksPerAnswers">will be displayed here</span>
                     </div>
                 </fieldset>
                 <fieldset>
@@ -84,6 +84,24 @@
                 <fieldset>
                     <legend>Total Sets</legend>
                     <div class="totalSets">will be displayed here</div>
+                </fieldset>
+                <fieldset>
+                    <legend>Average Knocks/Answer</legend>
+                    <div class="knocksAnswers">
+                        <span id="knocksPerAnswers">will be displayed here</span>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>Average Knocks/Hour</legend>
+                    <div class="knocksHour">will be displayed here</div>
+                </fieldset>
+                <fieldset>
+                    <legend>Average Sets/Answer</legend>
+                    <div class="setsAnswers">will be displayed here</div>
+                </fieldset>
+                <fieldset>
+                    <legend>Average Sets/Hour</legend>
+                    <div class="setsHours">will be displayed here</div>
                 </fieldset>
                 <fieldset>
                     <legend>Total Hours Working</legend>
