--- a/deals/deals.html
+++ b/deals/deals.html
@@ -63,14 +63,14 @@
                 </label>
             </p>
             <p>
-                Energy Efficiency <label class="switch">
+                Energy Efficiency<label class="switch">
                     <input class="switch-input" type="checkbox" />
                     <span class="switch-label" data-on="Yes" data-off="No" ></span> 
                     <span class="switch-handle"></span> 
                 </label>
             </p>
             <p>
-                <label for="optional-input">Powerwall: </label>
+                <label for="optional-input">Powerwalls: </label>
                 <input type="number" id="optional-input" placeholder="Powerwalls">
             </p>
             <p> <!-- Lead Source dropdown of 5 options -->
